--- a/atus.ipynb
+++ b/atus.ipynb
@@ -908,49 +908,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Obtenga la cantidad de muertos y lesionados de los últimos 3 años."
+    "# 7. Resuma los accidentes del último año por tipo y que porcentaje representan."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8. Obtenga la cantidad de muertos y lesionados de los últimos 3 años."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Cantidad de muertos de los ultimos 3 años: 14385'"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cantidad de muertos en 2021: 4401\n",
+      "Cantidad de muertos en 2022: 5181\n",
+      "Cantidad de muertos en 2023: 4803\n",
+      "Total de muertos en los ultimos 3 años: 14385\n"
+     ]
     }
    ],
    "source": [
-    "numMuertos = dataset[['CONDMUERTO', 'PASAMUERTO', 'PEATMUERTO', 'CICLMUERTO', 'OTROMUERTO', 'NEMUERTO']].sum().sum()\n",
-    "\"Cantidad de muertos de los ultimos 3 años: \"+str(numMuertos)"
+    "dataset_2021 = dataset[dataset[\"ANIO\"] == 2021]\n",
+    "numMuertos_2021 = dataset_2021[['CONDMUERTO', 'PASAMUERTO', 'PEATMUERTO', 'CICLMUERTO', 'OTROMUERTO', 'NEMUERTO']].sum().sum()\n",
+    "\n",
+    "dataset_2022 = dataset[dataset[\"ANIO\"] == 2022]\n",
+    "numMuertos_2022 = dataset_2022[['CONDMUERTO', 'PASAMUERTO', 'PEATMUERTO', 'CICLMUERTO', 'OTROMUERTO', 'NEMUERTO']].sum().sum()\n",
+    "\n",
+    "dataset_2023 = dataset[dataset[\"ANIO\"] == 2023]\n",
+    "numMuertos_2023 = dataset_2023[['CONDMUERTO', 'PASAMUERTO', 'PEATMUERTO', 'CICLMUERTO', 'OTROMUERTO', 'NEMUERTO']].sum().sum()\n",
+    "\n",
+    "print(\"Cantidad de muertos en 2021: \"+str(numMuertos_2021) + \"\\n\" + \"Cantidad de muertos en 2022: \"+str(numMuertos_2022) + \"\\n\" + \"Cantidad de muertos en 2023: \"+str(numMuertos_2023) + \"\\n\" + \"Total de muertos en los ultimos 3 años: \"+str(numMuertos_2021+numMuertos_2022+numMuertos_2023))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Cantidad de lesionados de los ultimos 3 años: 264467'"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cantidad de lesionados en 2021: 82466\n",
+      "Cantidad de lesionados en 2022: 91501\n",
+      "Cantidad de lesionados en 2023: 90500\n",
+      "Total de lesionados en los ultimos 3 años: 264467\n"
+     ]
     }
    ],
    "source": [
-    "numLesionados = dataset[['CONDHERIDO', 'PASAHERIDO', 'PEATHERIDO', 'CICLHERIDO', 'OTROHERIDO', 'NEHERIDO']].sum().sum()\n",
-    "\"Cantidad de lesionados de los ultimos 3 años: \"+str(numLesionados)"
+    "datasetLesionados_2021 = dataset[dataset[\"ANIO\"] == 2021]\n",
+    "numLesionados2021 = datasetLesionados_2021[['CONDHERIDO', 'PASAHERIDO', 'PEATHERIDO', 'CICLHERIDO', 'OTROHERIDO', 'NEHERIDO']].sum().sum()\n",
+    "\n",
+    "datasetLesionados_2022 = dataset[dataset[\"ANIO\"] == 2022]\n",
+    "numLesionados2022 = datasetLesionados_2022[['CONDHERIDO', 'PASAHERIDO', 'PEATHERIDO', 'CICLHERIDO', 'OTROHERIDO', 'NEHERIDO']].sum().sum()\n",
+    "\n",
+    "datasetLesionados_2023 = dataset[dataset[\"ANIO\"] == 2023]\n",
+    "numLesionados2023 = datasetLesionados_2023[['CONDHERIDO', 'PASAHERIDO', 'PEATHERIDO', 'CICLHERIDO', 'OTROHERIDO', 'NEHERIDO']].sum().sum()\n",
+    "\n",
+    "print(\"Cantidad de lesionados en 2021: \"+str(numLesionados2021) + \"\\n\" + \"Cantidad de lesionados en 2022: \"+str(numLesionados2022) + \"\\n\" + \"Cantidad de lesionados en 2023: \"+str(numLesionados2023) + \"\\n\" + \"Total de lesionados en los ultimos 3 años: \"+str(numLesionados2021+numLesionados2022+numLesionados2023))"
    ]
   }
  ],
